--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Khujwi Ali",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.3.0-beta2"
   }
